# outlook-copilot-sorter

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/scripts/: capture-screenshots.js  generate-portfolio.js
.github/workflows/: ci.yml  pages.yml  portfolio.yml  screenshots.yml
docs/: architecture.md  customization.md  diagrams.md  evaluation.md  faq.md  getting-started.md  portfolio-config.json
evals/: golden.json  run.py
examples/: graph_webhook_server.py  walkthrough.md
src/outlook_copilot_sorter/: __init__.py  backend.py  classifier.py  cli.py  copilot_drafter.py  graph_subscription_manager.py  graph_webhook.py  learn_from_moves.py  outlook_rules.py
tests/: test_classifier.py  test_drafter.py  test_graph_subscription_manager.py  test_graph_webhook.py  test_learn_from_moves.py  test_outlook_rules.py
